--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".EditAccount"></activity>
         <activity
             android:name=".AuthorizationFlow"
             android:theme="@style/AppTheme.NoActionBar">
